--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   # Photo View (for viewing generated images)
   photo_view: ^0.15.0
   
+  # 3D Model Viewer (for displaying GLB meshes)
+  model_viewer_plus: ^1.10.0
+  
   # File handling for 3D models
   path_provider: ^2.1.0
   
